# punjab-stubble-burning-analysis

./: .gitignore  README.md  app.py  data_processor.py  map_handler.py  pyproject.toml  replit.md  visualization.py
attached_assets/: stubble_with_district_full_final.csv
